Fix All Courses page alignment on Safari

--- a/app/assets/stylesheets/mixins/_bootstrap_grid_equal_height.scss
+++ b/app/assets/stylesheets/mixins/_bootstrap_grid_equal_height.scss
@@ -11,11 +11,18 @@
     display: flex;
     flex-direction: column;
   }
+
+  &::before,
+  &::after {
+    display: none;
+  }
 }
 
 .is-flex {
   .box {
     background: none;
+    flex-grow: 1;
+    height: 100%;
     position: static;
   }
 
